--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -4,3 +4,7 @@
 /* endinject */
 
 /* This file allows you to override default styles in one central location for easier upgrade and maintenance. */
+
+.portlet-layout{
+    margin-top : 30px;
+}
